--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+  <title>Coffee Coupon</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,7 +22,22 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  
+  <header>
+    <h1>Cool down, wake up!</h1>
+    <p>2-for-1 Cold Beverages</p>
+  </header>
+
+  <div class="main-container">
+    <img src="img/coffee_648x264.jpg" alt="iced coffee image"
+    >
+    <aside>
+      <h2>Just print and present this coupon to double your pleasure</h2>
+      <p>Through April 25, buy any featured iced or blended coffee beverage and get a 2nd one free</p>
+      <p>Spread the Word!</p>
+    </aside>
+  </div>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
