Added css and finalized coupon

--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
 
   <!-- Add your site or application content here -->
   
-  <header>
+  <header class="top-heading">
     <h1>Cool down, wake up!</h1>
     <p>2-for-1 Cold Beverages</p>
   </header>
 
   <div class="main-container">
-    <img src="img/coffee_648x264.jpg" alt="iced coffee image"
-    >
-    <aside>
+    <img src="img/coffee_648x264.jpg" alt="iced coffee image">
+
+    <aside class="coupon-box">
       <h2>Just print and present this coupon to double your pleasure</h2>
-      <p>Through April 25, buy any featured iced or blended coffee beverage and get a 2nd one free</p>
-      <p>Spread the Word!</p>
+      <p class="coupon-offer">Through April 25, buy any featured iced or blended coffee beverage and get a 2nd one free.</p>
+      <p class="coupon-button">Spread <br> the Word!</p>
+      <img src="img/arrow_13x26.jpg" alt="arrow icon">
     </aside>
   </div>
 
